asg/tests/pass/integers/i32/negate_zero.leo
function main() {
    let a = 0i32;

    console.assert(-a == 0i32);
}