asg/tests/fail/integers/u32/min_fail.leo
function main() {
    let a: u32 = -1;
}